Added more error popups for bad user input, got rid of typecast errors, added missing API class invocation